--- a/src/utils/iproute2-2.6.33/Makefile
+++ b/src/utils/iproute2-2.6.33/Makefile
@@ -27,8 +27,10 @@ ADDLIB+=dnet_ntop.o dnet_pton.o
 #options for ipx
 ADDLIB+=ipx_ntop.o ipx_pton.o
 
-CC = gcc
-HOSTCC = gcc
+#CC = gcc
+CC = ${CROSS_COMPILE}gcc
+#HOSTCC = gcc
+HOSTCC = ${CC}
 CCOPTS = -D_GNU_SOURCE -O2 -Wstrict-prototypes -Wall
 CFLAGS = $(CCOPTS) -I../include $(DEFINES)
 YACCFLAGS = -d -t -v
