[dev] 调整linux内核默认编译选项，以适配dec板子

--- a/src/linux-2.6.33.5/arch/arm/configs/at91rm9200dk_defconfig
+++ b/src/linux-2.6.33.5/arch/arm/configs/at91rm9200dk_defconfig
@@ -182,6 +182,8 @@ CONFIG_LEDS=y
 CONFIG_LEDS_TIMER=y
 # CONFIG_LEDS_CPU is not set
 CONFIG_ALIGNMENT_TRAP=y
+CONFIG_AEABI=y
+CONFIG_OABI_COMPAT=y
 
 #
 # Boot options
@@ -285,6 +287,17 @@ CONFIG_TCP_CONG_BIC=y
 # CONFIG_IRDA is not set
 # CONFIG_BT is not set
 # CONFIG_IEEE80211 is not set
+CONFIG_CAN=y
+CONFIG_CAN_RAW=y
+
+#
+# CAN Device Drivers
+#
+# CONFIG_CAN_VCAN is not set
+CONFIG_CAN_DEV=y
+CONFIG_CAN_CALC_BITTIMING=y
+CONFIG_CAN_SJA1000=y
+CONFIG_CAN_SJA1000_PLATFORM=y
 
 #
 # Device Drivers
