[dev] 添加Nor Flash分区配置

--- a/src/linux-2.6.33.5/arch/arm/configs/at91rm9200dk_defconfig
+++ b/src/linux-2.6.33.5/arch/arm/configs/at91rm9200dk_defconfig
@@ -354,7 +354,7 @@ CONFIG_MTD_CFI_I1=y
 CONFIG_MTD_CFI_I2=y
 # CONFIG_MTD_CFI_I4 is not set
 # CONFIG_MTD_CFI_I8 is not set
-# CONFIG_MTD_CFI_INTELEXT is not set
+CONFIG_MTD_CFI_INTELEXT=y
 CONFIG_MTD_CFI_AMDSTD=y
 CONFIG_MTD_CFI_AMDSTD_RETRY=0
 # CONFIG_MTD_CFI_STAA is not set
