[dev] 加入cs8900网卡设备与驱动

--- a/src/linux-2.6.33.5/drivers/net/Kconfig
+++ b/src/linux-2.6.33.5/drivers/net/Kconfig
@@ -1438,8 +1438,7 @@ config FORCEDETH_NAPI
 
 config CS89x0
 	tristate "CS89x0 support"
-	depends on NET_ETHERNET && (ISA || EISA || MACH_IXDP2351 \
-		|| ARCH_IXDP2X01 || ARCH_PNX010X || MACH_MX31ADS)
+	depends on NET_ETHERNET && (ISA || EISA || ARM)
 	---help---
 	  Support for CS89x0 chipset based Ethernet cards. If you have a
 	  network (Ethernet) card of this type, say Y and read the
@@ -1449,6 +1448,12 @@ config CS89x0
 
 	  To compile this driver as a module, choose M here. The module
 	  will be called cs89x0.
+
+config CS89x0_PLATFORM
+	bool "CS89x0 platform driver support"
+	depends on CS89x0
+	help
+	  Say Y to compile the cs89x0 driver as a platform driver. 
 
 config CS89x0_NONISA_IRQ
 	def_bool y
