--- a/src/linux-2.6.33.5/arch/arm/configs/at91rm9200dk_defconfig
+++ b/src/linux-2.6.33.5/arch/arm/configs/at91rm9200dk_defconfig
@@ -464,6 +464,9 @@ CONFIG_NETDEVICES=y
 # CONFIG_BONDING is not set
 # CONFIG_EQUALIZER is not set
 # CONFIG_TUN is not set
+CONFIG_CS89x0=y
+CONFIG_CS89x0_PLATFORM=y
+
 
 #
 # PHY device support
